--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Join & Earn Rewards</h1>
+  <div class="container">
+    <h1>Join & Earn Rewards</h1>
 
-  <form id="signupForm">
-    <input required placeholder="Name" id="name">
-    <input required placeholder="Email" id="email">
-    <button>Sign Up</button>
-  </form>
+    <form id="signupForm">
+      <input required placeholder="Name" id="name">
+      <input required placeholder="Email" id="email">
+      <button>Sign Up</button>
+    </form>
 
-  <div id="result"></div>
+    <div id="result"></div>
+  </div>
 
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
