--- a/tracker.html
+++ b/tracker.html
@@ -5,13 +5,15 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h2>Check Your Referrals</h2>
+  <div class="container">
+    <h2>Check Your Referrals</h2>
 
-  <input placeholder="Enter 6-digit code" id="code">
-  <button onclick="lookup()">Check</button>
+    <input placeholder="Enter 6-character code" id="code">
+    <button onclick="lookup()">Check</button>
 
-  <div id="stats"></div>
+    <div id="stats"></div>
+  </div>
 
-<script src="tracker.js"></script>
+  <script src="tracker.js"></script>
 </body>
 </html>
