--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Referral Signup</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
 <body>
+  <div class="header">
+    <img src="Taxentric Sun IV.png" alt="Your Logo" class="logo">
+  </div>
+
   <div class="container">
     <h1>Join & Earn Rewards</h1>
 
@@ -19,4 +17,3 @@
 
   <script src="script.js"></script>
 </body>
-</html>
