--- a/index.html
+++ b/index.html
@@ -1,19 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Referral Site</title>
+
+    <!-- LINK TO YOUR CSS FILE -->
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-  <div class="header">
-    <img src="Taxentric Sun IV.png" alt="Your Logo" class="logo">
-  </div>
 
-  <div class="container">
-    <h1>Join & Earn Rewards</h1>
+    <!-- Header with logo -->
+    <div class="header">
+        <img src="Taxentric Sun IV.png" alt="Your Logo" class="logo">
+    </div>
 
-    <form id="signupForm">
-      <input required placeholder="Name" id="name">
-      <input required placeholder="Email" id="email">
-      <button>Sign Up</button>
-    </form>
+    <!-- Main container -->
+    <div class="container">
+        <h1>Join & Earn Rewards</h1>
+        <form id="signupForm">
+            <input required placeholder="Name" id="name">
+            <input required placeholder="Email" id="email">
+            <button>Sign Up</button>
+        </form>
+        <div id="result"></div>
+    </div>
 
-    <div id="result"></div>
-  </div>
-
-  <script src="script.js"></script>
+    <!-- JS -->
+    <script src="script.js"></script>
 </body>
+</html>
