--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Header -->
+  <!-- Header / Logo -->
   <div class="header">
     <img src="logo.png" alt="Logo" class="logo">
   </div>
