--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Referral Dashboard - Taxentric</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="dashboard-style.css">
 </head>
 <body>
   <div class="page-bg"></div>
