--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
       <!-- SIGN UP -->
       <section id="signupSection">
         <form id="signup-form" class="space-y-5">
-
           <div class="space-y-2">
             <label for="name">Full Name</label>
             <input id="name" type="text" required />
@@ -37,10 +36,7 @@
             <input id="email" type="email" required />
           </div>
 
-          <button id="submit-btn" type="submit">
-            Get Started
-          </button>
-
+          <button id="submit-btn" type="submit">Get Started</button>
         </form>
 
         <p id="success-message" class="hidden text-green-700 text-center mt-4">
@@ -53,7 +49,6 @@
             <span id="refCode"></span>
             <button id="copy-btn" type="button">Copy</button>
           </div>
-
           <p class="share-label">Share your link</p>
           <div class="share-buttons">
             <a id="shareFb" target="_blank">Facebook</a>
@@ -61,14 +56,10 @@
             <a id="shareWa" target="_blank">WhatsApp</a>
             <a id="shareSms" target="_blank">SMS</a>
           </div>
-
-          <p class="mt-4">
-            <a id="dashboardLink" target="_blank">Go to your dashboard →</a>
-          </p>
+          <a id="dashboardLink" href="#" class="dashboard-link">Go to Dashboard</a>
         </div>
 
-        <!-- Legal terms -->
-        <p class="legal mt-6">
+        <p class="legal">
           Rewards are earned only when a referred individual completes and files a paid tax return with Taxentric Solutions.
           Referral signups alone do not qualify for rewards. Rewards are issued after filing is confirmed.
           Taxentric Solutions reserves the right to verify referrals and deny rewards for fraud, abuse, or ineligible filings.
