--- a/dashboard.html
+++ b/dashboard.html
@@ -11,9 +11,12 @@
   <div class="page-overlay"></div>
 
   <header class="site-header">
-    <a href="https://taxentric.com" class="back-link">← Back to Taxentric.com</a>
-    <img src="logo.png" class="logo" alt="Taxentric Solutions" />
-  </header>
+  <img src="logo.png" class="logo" alt="Taxentric" />
+
+  <a href="https://taxentric.com" class="back-link">
+    ← Back to Taxentric.com
+  </a>
+</header>
 
   <main class="page-center">
     <div class="card">
