--- a/dashboard.html
+++ b/dashboard.html
@@ -11,12 +11,14 @@
   <div class="page-overlay"></div>
 
   <header class="site-header">
-  <img src="logo.png" class="logo" alt="Taxentric" />
-
-  <a href="https://taxentric.com" class="back-link">
-    ← Back to Taxentric.com
-  </a>
+  <div class="header-inner">
+    <img src="logo.png" class="logo" alt="Taxentric" />
+    <a href="https://taxentric.com" class="back-link">
+      ← Back to Taxentric.com
+    </a>
+  </div>
 </header>
+
 
   <main class="page-center">
     <div class="card">
