--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
   <div class="page-overlay"></div>
 
   <header class="site-header">
-  <img src="logo.png" class="logo" alt="Taxentric" />
-
-  <a href="https://taxentric.com" class="back-link">
-    ← Back to Taxentric.com
-  </a>
+  <div class="header-inner">
+    <img src="logo.png" class="logo" alt="Taxentric" />
+    <a href="https://taxentric.com" class="back-link">
+      ← Back to Taxentric.com
+    </a>
+  </div>
 </header>
 
 
