--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
             <a id="shareWa" target="_blank">WhatsApp</a>
             <a id="shareSms" target="_blank">SMS</a>
           </div>
+		  <div class="portal-button-container" style="margin-top: 30px; text-align: center;">
+    <a href="https://YOUR-CLIENT-PORTAL-LOGIN-URL.com" target="_blank" class="portal-btn">
+      Continue to Client Portal →
+    </a>
+  </div>
           <a id="dashboardLink" href="#" class="dashboard-link">Go to Dashboard</a>
         </div>
 
