--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <a id="shareSms" target="_blank">SMS</a>
           </div>
 		  <div class="portal-button-container" style="margin-top: 30px; text-align: center;">
-    <a href="https://YOUR-CLIENT-PORTAL-LOGIN-URL.com" target="_blank" class="portal-btn">
+    <a href="https://portal.taxentric.com" target="_blank" class="portal-btn">
       Continue to Client Portal →
     </a>
   </div>
